--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pydantic==1.8.2
-numpy==1.19.5
-transformers==4.5.0
+transformers==4.8.2
+pydantic==1.8.1
 uvicorn==0.13.4
 requests==2.25.1
-tensorflow-cpu==2.4.2
+tensorflow==2.4.1
+numpy==1.19.5
 tqdm==4.60.0
 beautifulsoup4==4.9.3
-fastapi==0.65.2
+fastapi==0.67.0
