--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ transformers==4.8.2
 pydantic==1.8.2
 uvicorn==0.13.4
 requests==2.25.1
-tensorflow==2.4.2
+tensorflow-cpu==2.4.2
 numpy==1.19.5
 tqdm==4.60.0
 beautifulsoup4==4.9.3
