--- a/.github/workflows/master_Smart-Bookmark-API.yml
+++ b/.github/workflows/master_Smart-Bookmark-API.yml
@@ -1,8 +1,7 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - Smart-Bookmark-API
+name: Build and deploy Python project to Azure Function App - Smart-Bookmark-API
 
 on:
   push:
@@ -10,53 +9,35 @@ on:
       - master
   workflow_dispatch:
 
+env:
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  PYTHON_VERSION: '3.8' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: 'Checkout GitHub Action'
+      uses: actions/checkout@v2
 
-    - name: Set up Python version
+    - name: Setup Python ${{ env.PYTHON_VERSION }} Environment
       uses: actions/setup-python@v1
       with:
-        python-version: '3.8'
+        python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: Create and start virtual environment
+    - name: 'Resolve Project Dependencies Using Pip'
+      shell: bash
       run: |
-        python -m venv venv
-        source venv/bin/activate
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+        popd
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-
-    # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
-    - name: Upload artifact for deployment jobs
-      uses: actions/upload-artifact@v2
+    - name: 'Run Azure Functions Action'
+      uses: Azure/functions-action@v1
+      id: fa
       with:
-        name: python-app
-        path: |
-          .
-          !venv/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: python-app
-          path: .
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'Smart-Bookmark-API'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_a1ac6f41eabf43308a90de9e611d78f1 }}
+        app-name: 'Smart-Bookmark-API'
+        slot-name: 'production'
+        package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_7d9d1e5284f4403399bde11ff05335a3 }}
