--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /.vscode
-/assets/weights/weights3.h5
+/api/assets/weights/weights3.h5
 /__pycache__
-/src/__pycache__
+/api/src/__pycache__
 /env
-/.deta
