chore: updated to v4

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "main:app"
+                "api.main:app"
             ],
             "jinja": true
         },
